Fixed incorrect image links

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
     </div>
     <div class="row text-center add-bottom">
       <div class="col-md-4">
-          <img class="img-responsive center-block" src="images/rsz_duct-sizer.png" data-toggle="modal" data-target="#project1">
+          <img class="img-responsive center-block" src="images/duct-sizer.png" data-toggle="modal" data-target="#project1">
           <h3 class="work-title text-uppercase">Duct Sizer</h3>
           <p><a href="//github.com/bahalps/duct-sizer">http://github.com/bahalps/duct-sizer</a></p>
       </div>
@@ -72,7 +72,7 @@
           <h4 class="modal-title text-center" id="myModalLabel">Duct Sizer</h4>
         </div>
         <div class="modal-body">
-          <img class="img-responsive" src="images/rsz_duct-sizer.png">
+          <img class="img-responsive" src="images/duct-sizer.png">
           This was my first project in this class. I learned a lot about HTML and CSS.
         </div>
         <div class="modal-footer">
@@ -86,7 +86,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+          <h4 class="modal-title text-center" id="myModalLabel">Favorite App Page</h4>
         </div>
         <div class="modal-body">
           <img class="img-responsive" src="http://placepuppy.it/555/300">
@@ -103,7 +103,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+          <h4 class="modal-title text-center" id="myModalLabel">Favorite App Page</h4>
         </div>
         <div class="modal-body">
           <img class="img-responsive" src="http://placepuppy.it/555/300">
