Corrected validation errors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Portfolio!</title>
   <link href="//fonts.googleapis.com/css?family=Roboto:400,900,300,100,500" rel="stylesheet">
@@ -75,11 +75,11 @@
   </footer>
     
   <!-- Modal -->
-  <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h2 class="modal-title text-center text-uppercase" id="myModalLabel">Duct Sizer</h2>
+          <h2 class="modal-title text-center text-uppercase" id="myModalLabel1">Duct Sizer</h2>
         </div>
         <div class="modal-body">
           <img class="img-responsive project-img" src="images/duct-sizer.png" alt="Project Image">
@@ -92,11 +92,11 @@
     </div>
   </div>
 
-  <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h2 class="modal-title text-center text-uppercase" id="myModalLabel">Favorite App Page</h2>
+          <h2 class="modal-title text-center text-uppercase" id="myModalLabel2">Favorite App Page</h2>
         </div>
         <div class="modal-body">
           <img class="img-responsive project-img" src="images/placeholder.jpg" alt="Project Image">
@@ -109,11 +109,11 @@
     </div>
   </div>
 
-  <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h2 class="modal-title text-center text-uppercase" id="myModalLabel">Favorite App Page</h2>
+          <h2 class="modal-title text-center text-uppercase" id="myModalLabel3">Favorite App Page</h2>
         </div>
         <div class="modal-body">
           <img class="img-responsive project-img" src="images/placeholder.jpg" alt="Project Image">
